Add up more sections to match jsonresume schema

--- a/src/positive-html.html
+++ b/src/positive-html.html
@@ -64,6 +64,9 @@
       {{#*inline "icon-recognition"}}<span class="fa fa-lg fa-trophy"></span>{{/inline}}
       {{> section/recognition _icon="icon-recognition"}}
 
+      {{#*inline "icon-languages"}}<span class="fa fa-lg fa-bullhorn"></span>{{/inline}}
+      {{> languages _icon="icon-languages"}}
+
       {{#*inline "icon-speaking"}}<span class="fa fa-lg fa-users"></span>{{/inline}}
       {{> section/speaking _icon="icon-speaking"}}
 
