--- a/src/positive-pdf.html
+++ b/src/positive-pdf.html
@@ -64,6 +64,9 @@
       {{#*inline "icon-recognition"}}<span class="fa fa-lg fa-trophy"></span>{{/inline}}
       {{> section/recognition _icon="icon-recognition"}}
 
+      {{#*inline "icon-languages"}}<span class="fa fa-lg fa-bullhorn"></span>{{/inline}}
+      {{> languages _icon="icon-languages"}}
+
       {{#*inline "icon-speaking"}}<span class="fa fa-lg fa-users"></span>{{/inline}}
       {{> section/speaking _icon="icon-speaking"}}
 
@@ -72,6 +75,9 @@
 
       {{#*inline "icon-references"}}<span class="fa fa-lg fa-thumbs-o-up"></span>{{/inline}}
       {{> section/references _icon="icon-references"}}
+
+      {{#*inline "icon-interests"}}<span class="fa fa-lg fa-paint-brush"></span>{{/inline}}
+      {{> interests _icon="icon-interests"}}
 
     </div>
   </main>
